Thu Nov  2 15:42:29 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
        * ace/Sock_Connect.h:
          Added support for IPv6 detection on HPUX, AIX, Solaris, WinCE,
          and VxWorks 5.5.x.

Wed Nov 01 09:05:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_stdlib.inl:

          Fixed conversion warnings in atop() on OpenVMS.

Wed Nov 01 08:35:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_sys_stat.h:

          Fixed Borland compile failure over def of ACE_Stat.

Tue Oct 31 23:08:32 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.h: Note that the Linux epoll code implementation
          is supported, but the /dev/poll implementation is still
          experimental.

Tue Oct 31 10:31:10 UTC 2006  Ossama Othman  <ossama_othman at symantec.com>

        * ace/OS_NS_sys_stat.h (ACE_WSTAT_FUNC_NAME):

          Corrected wstat() function name for Borland.

Mon Oct 30 19:57:20 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/ciao_tests.lst:

          Added run_test.pl in CIAO/tests/IDL3/Events/Any to the list of
          CIAO tests to be run automatically.

Mon Oct 30 17:34:35 UTC 2006  Ossama Othman  <ossama_othman at symantec.com>

        * ace/config-win32-common.h:

          Use 64-bit file offsets by default in the WIN64 case, similar to
          what 64-bit UNIX systems do.

Mon Oct 30 17:23:15 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added 2 new build options,
          dmalloc and mtrace. When specified at build time (e.g. make mtrace=1)
          the PLATFORM_DMALLOC_CPPFLAGS and/or PLATFORM_MTRACE_CPPFLAGS values
          are added to CPPFLAGS. For dmalloc, the PLATFORM_DMALLOC_LDFLAGS and
          PLATFORM_DMALLOC_LIBS are added to LDFLAGS and LIBS, respectively.
          Also added the ability to specify additional purify and quantify