@@ -1,3 +1,8 @@
+Thu Nov  2 16:10:10 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * ace/Sock_Connect.cpp:
+          Cleaned up debugging code left in my previous premature commit.
+
 Thu Nov  2 15:42:29 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ace/Sock_Connect.cpp:
